welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:21: error: type mismatch;
 found   : Array[Int]
 required: Int
	return T
               ^